Moved lens js to own dir

--- a/views/lens.hbs
+++ b/views/lens.hbs
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 
-    <script src='/js/lens.js'></script>
+    <script src='/js/lens/lens.js'></script>
 
   </head>
   <body class="loading">
