--- a/views/lens.hbs
+++ b/views/lens.hbs
@@ -13,14 +13,22 @@
 
     <script src="/js/jquery.js"></script>
 
-    <!-- MathJax -->
+    
+    <!-- MathJax Configuration -->
     <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      "HTML-CSS": { linebreaks: { automatic: true } },
-             SVG: { linebreaks: { automatic: true } }
-    });
+       MathJax.Hub.Config({
+         jax: ["input/TeX", "input/MathML","output/HTML-CSS"],
+         extensions: ["MathMenu.js","MathZoom.js", "CHTML-preview.js"],
+         "HTML-CSS": { linebreaks: { automatic: true }, EqnChunk: 9999 },
+         SVG: { linebreaks: { automatic: true }, EqnChunk: 9999  },
+         TeX: {
+           extensions: ["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]
+         },
+         "displayAlign": "left",
+         styles: {".MathJax_Display": {padding: "0em 0em 0em 3em" },".MathJax_SVG_Display": {padding: "0em 0em 0em 3em" },}
+      });
     </script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="http://beta.mathjax.org/mathjax/latest/MathJax.js?config=MML_HTMLorMML-full"></script>
 
 
     <script src='/js/lens.js'></script>
