--- a/views/lens.hbs
+++ b/views/lens.hbs
@@ -41,6 +41,8 @@
         window.Lens = require("/js/lens.js");
       }
 
+      window.lensDocument = false;
+
       // Little helper used to parse query strings from urls
       // --------
       // 
@@ -94,53 +96,6 @@
       function isTouchDevice() {
         return 'ontouchstart' in document.documentElement;
       }
-
-      // Example documents
-      // --------
-      // 
-      // Uncomment the document you want see
-
-      // Remote Example 00005
-      // var documentURL = "https://s3.amazonaws.com/elife-cdn/elife-articles/00005/elife00005.xml";
-
-      // Remote Example 00311
-      // var documentURL = "https://s3.amazonaws.com/elife-cdn/elife-articles/00311/elife00311.xml";
-
-      // Remote Example 00778
-      // var documentURL = "https://s3.amazonaws.com/elife-cdn/elife-articles/00778/elife00778.xml";
-
-      // Remote Example 01608
-      // var documentURL = "https://s3.amazonaws.com/elife-cdn/elife-articles/01608/elife01608.xml";
-
-      // Remote Example 01541
-      // var documentURL = "https://s3.amazonaws.com/elife-cdn/elife-articles/01541/elife01541.xml";
-
-      // Remote Example 01157
-      // var documentURL = "https://s3.amazonaws.com/elife-cdn/elife-articles/01157/elife01157.xml";
-
-      // Remote Example 00924
-      // var documentURL = "https://s3.amazonaws.com/elife-cdn/elife-articles/00924/elife00924.xml";
-
-      // Remote Example 00951
-      // var documentURL = "https://s3.amazonaws.com/elife-cdn/elife-articles/00951/elife00951.xml";
-
-      // Lens About Document
-      // Deploy to: http://lens.elifesciences.org/about
-      // var documentURL = "data/about/index.xml";
-        
-      // Lens Article Description
-      // Deploy to: http://lens.elifesciences.org/lens_article
-      // var documentURL = "lens_article.xml";
-
-      // Local Example
-      // var documentURL = "data/00778/index.xml";
-
-      // Kitchen Sink Example (contains a lot of edge cases)
-      // var documentURL = "data/kitchen_sink/index.xml";
-
-
-      // PLOS Bio example
-      var documentURL = "data/pbio_1001749/index.xml";
 
       
       // Create a new Lens app instance
