--- a/views/default.hbs
+++ b/views/default.hbs
@@ -7,10 +7,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <!-- Le styles -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap.min.yeti.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  {{>stylesheets}}
+
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -25,27 +23,8 @@
     ================================================== -->
 
 
+    {{>navigation}}
 
-  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">OA Sandbox</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
 
   	{{{ body }}}
 
@@ -54,15 +33,8 @@
     <p><a href="index.html">Back to homepage</a></p>
   </footer>
 
-  <!-- Le javascript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="js/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery-dateFormat.min.js"></script>
-  <script src="js/bootstrap-paginator.js"></script>
-  <script src="js/handlebars-v2.0.0.js"></script>
-  <script src="js/script.js"></script>
+  {{>scripts}}
+
     
 </body>
 </html>
