Very basic authentication and sessions

--- a/views/search.hbs
+++ b/views/search.hbs
@@ -74,6 +74,7 @@
             \{{ authors }}<br />
             <span class="italic">\{{ journal }}</span>&nbsp;&nbsp;\{{ year }}
           </p>
+          <p><a href="#" class="save" data-pmcid="\{{ pmcid }}">Save</a></p>
         </li>
       \{{/results}}
     </script>
