--- a/views/lens.hbs
+++ b/views/lens.hbs
@@ -11,7 +11,7 @@
 
     <link href='/css/lens.css' rel='stylesheet' type='text/css'/>
 
-    <script src="/js/jquery.js"></script>
+    <script src="/js/vendor.js"></script>
 
     
     <!-- MathJax Configuration -->
