--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -1,3 +1,3 @@
 {{#each scripts}}
-	<script type="text/javascript" src="{{this}}"></script>
+	<script type="text/javascript" src="/js/{{this}}"></script>
 {{/each}}
