--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,3 +1,8 @@
+@import "./yeti/variables.less";
+@import "./bootstrap/bootstrap.less";
+@import "./yeti/bootswatch.less";
+
+
 .jumbotron-landing {
 	background-image: url(../img/carousel-jellyfish1.jpg);
 	color: white;
