--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,82 +1,77 @@
 {{!< default}}
 
-<div class="container">
-
-<div class="row" id="live-search">
-
-	<form method="GET" action="results.html" class="col-sm-6 col-sm-offset-3" id="search-form">
-		<div class="form-group">
-	        <label for="search">Search based on PMCID, author, title, and keyword to find articles to read in Lens PMC.  Not all articles are Open Access in PMC. Due to copyright, these papers are not available in full.</label>
-	        <input name="query" id="search" class="form-control" type="text" placeholder="Enter a PubMed search query">
-          <button type="submit" class="btn btn-default " id="search-button">Search</button>
-	    </div>
-	    <p class="dateline">
-	    	<label for="date-begin"><i>(Optional)</i> Publication year</label>
-	    	<input name="date-begin" type="number" class="small-text" placeholder="1800" /> 
-	    	<label for="date-end">to</label> 
-	    	<input name="date-end" type="number" class="small-text" placeholder="present" />  
-	    </p>
-	    
-	    <div class="form-group">
-	       
-	    </div>
-	</form>
+<div id="main-nav" class="navmenu navmenu-inverse navmenu-fixed-left offcanvas-xs main-nav" role="navigation">
+  <ul class="nav navmenu-nav">
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, Casey</a>
+      <ul class="dropdown-menu navmenu-nav" role="menu">
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Logout</a></li>
+      </ul>
+    </li>
+    <li>
+      <form class="form-inline" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+          <button type="submit" class="btn btn-default">S</button>
+        </div>
+      </form>
+    </li>
+    <li><a href="#">Folder</a></li>
+    <li><a href="#">Folder</a></li>
+    <li class="active"><a href="#">Folder</a></li>
+    <li><a href="#">Folder</a></li>
+    <li><a href="#">Folder</a></li>
+    <li><a href="#">Folder</a></li>
+  </ul>
 </div>
 
-<hr />    
+<div id="mobile-nav" class="navmenu navmenu-inverse navmenu-fixed-left visible-xs mobile-nav">
+  <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target="#main-nav" data-canvas="body">
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+  </button>
+</div>
 
-<div class="row">
-	<sidebar class="col-sm-3">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
+      <div class="panel-group paper-accordion" id="paper-accordion" role="tablist" aria-multiselectable="true">
 
-       <h3>OA</h3>
-       <ul class="unstyled">
-        <li>
-          <label class="radio" name="full_only">
-            <input type="radio" class="search-refresh" checked="checked" name="article_type" value="full_only"/>Full Article Only
-          </label>
-        </li>
-        <li>
-          <label class="radio" name="all_results">
-            <input type="radio" class="search-refresh" name="article_type" value="all_results"/>All Results
-          </label>
-        </li>
-      </ul>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab">
+            <a data-toggle="collapse" data-parent="#paper-accordion" href="#paper-one">
+              <h4>Title title title title title</h4>
+              <h5>List of authors</h5>
+            </a>
+          </div>
+          <div id="paper-one" class="panel-collapse collapse">
+            <div class="panel-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+          </div>
+        </div>
 
-      <h3>Journals</h3>
-      <ul class="unstyled" id="journal-list"></ul>
-      <script id="journal-template" type="text/x-handlebars-template">
-        \{{#journals}}
-          <li>
-            <label class="checkbox">
-              <input type="checkbox" class="search-refresh" name="jrnlpub" value="\{{this}}" />\{{this}}
-            </label>
-          </li>
-        \{{/journals}}
-      </script>
-    </sidebar>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab">
+            <a data-toggle="collapse" data-parent="#paper-accordion" href="#paper-two">
+              <h4>Title title title title title</h4>
+              <h5>List of authors</h5>
+            </a>
+          </div>
+          <div id="paper-two" class="panel-collapse collapse">
+            <div class="panel-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+          </div>
+        </div>
 
-	<article class="col-sm-9 result-list">
-	  
-	  <h3>Results</h3>
-	  
-	  <p id="result-total"></p>
-	  
-	  <ul id="pagination"></ul>
+      </div>
+    </div>
 
-	  <ul class="unstyled" id="result-list"></ul>
-    <script id="result-template" type="text/x-handlebars-template">
-      \{{#results}}
-        <li>
-          <h4>
-            <a href="lens/?pmc=\{{ pmcid }}">\{{ title }}</a>
-          </h4>
-          <p>
-            \{{ authors }}<br />
-            <span class="italic">\{{ journal }}</span>&nbsp;&nbsp;\{{ year }}
-          </p>
-        </li>
-      \{{/results}}
-    </script>
-
-	</article>    
+    <div class="hidden-sm hidden-xs col-md-6">
+      <h2>Paper details</h2>
+    </div>
+  </div>
 </div>
