--- a/views/search.hbs
+++ b/views/search.hbs
@@ -10,9 +10,9 @@
       </ul>
     </li>
     <li>
-      <form class="form-inline" role="search">
+      <form class="form-inline" role="search" method="GET" action="/search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" name ="query" placeholder="Search">
           <button type="submit" class="btn btn-default">S</button>
         </div>
       </form>
@@ -39,33 +39,7 @@
     <div class="col-sm-12 col-md-6">
       <div class="panel-group paper-accordion" id="paper-accordion" role="tablist" aria-multiselectable="true">
 
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab">
-            <a data-toggle="collapse" data-parent="#paper-accordion" href="#paper-one">
-              <h4>Title title title title title</h4>
-              <h5>List of authors</h5>
-            </a>
-          </div>
-          <div id="paper-one" class="panel-collapse collapse">
-            <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab">
-            <a data-toggle="collapse" data-parent="#paper-accordion" href="#paper-two">
-              <h4>Title title title title title</h4>
-              <h5>List of authors</h5>
-            </a>
-          </div>
-          <div id="paper-two" class="panel-collapse collapse">
-            <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
+        <h2>Search results go here</h2>
 
       </div>
     </div>
