Commented out MongoSessionStore because it conflicts with nodemon

--- a/src/main.less
+++ b/src/main.less
@@ -10,13 +10,14 @@
 * NAVIGATION
 =============================== */
 
+
 @mobile-nav-width: 74px;
 
 .mobile-nav {
 	width: @mobile-nav-width;
 }
 
-body {
+.search {
 	padding-left: @mobile-nav-width;
 	@media (min-width: @screen-sm) {
 		padding-left: @navmenu-width;
