--- a/views/default.hbs
+++ b/views/default.hbs
@@ -10,13 +10,13 @@
 
 
   {{>stylesheets}}
-  
+
   </head>
 
-  <body class="index">
+  <body class="{{pagename}}">
 
   	{{{ body }}}
-  
+
   {{>scripts}}
   </body>
 </html>
