--- a/views/search.hbs
+++ b/views/search.hbs
@@ -39,7 +39,7 @@
     <div class="col-sm-12 col-md-6">
       <div class="panel-group paper-accordion" id="paper-accordion" role="tablist" aria-multiselectable="true">
 
-        <h2>Search results go here</h2>
+        <div id="citations"></div>
 
       </div>
     </div>
