Created sidebar abstract view for larger screens

--- a/views/search.hbs
+++ b/views/search.hbs
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <div class="hidden-sm hidden-xs col-md-6">
+    <div class="hidden-sm hidden-xs col-md-6" id="paper-details">
       <h2>Paper details</h2>
     </div>
   </div>
