Created front-end code for adding folders

--- a/views/search.hbs
+++ b/views/search.hbs
@@ -17,12 +17,10 @@
         </div>
       </form>
     </li>
-    <li><a href="#">Folder</a></li>
-    <li><a href="#">Folder</a></li>
-    <li class="active"><a href="#">Folder</a></li>
-    <li><a href="#">Folder</a></li>
-    <li><a href="#">Folder</a></li>
-    <li><a href="#">Folder</a></li>
+    <div id="folders">
+      <li><a href="#">Folder</a></li>
+      <li><a href="#">Folder</a></li>
+    </div>
   </ul>
 </div>
 
