Restyled home page

--- a/views/partials/stylesheets.hbs
+++ b/views/partials/stylesheets.hbs
@@ -1,3 +1,5 @@
+<link href="/fonts/icomoon/icomoon.css" rel="stylesheet">
+
 {{#each stylesheets}}
   <link href="/css/{{this}}" rel="stylesheet">
 {{/each}}
