--- a/src/main.less
+++ b/src/main.less
@@ -1,10 +1,28 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
 
-@import "../bower_components/bootswatch/yeti/variables.less";
-@import "../bower_components/bootswatch/yeti/bootswatch.less";
+@import "../bower_components/bootswatch/journal/variables.less";
+@import "../bower_components/bootswatch/journal/bootswatch.less";
 
 @import "../bower_components/jasny-bootstrap/less/jasny-bootstrap.less";
 
+/*=================================
+* VARIABLES
+=================================*/
+
+@font-size-base: 18px;
+@grid-float-breakpoint: 0;
+
+@navbar-inverse-color: white;
+@navbar-inverse-bg: transparent;
+@navbar-inverse-link-hover-bg: rgba(0, 0, 0, 0.5);
+
+/*=================================
+* GENERAL
+=================================*/
+
+html {
+	height: 100%;
+}
 
 /* ===============================
 * NAVIGATION
@@ -22,4 +40,34 @@
 	@media (min-width: @screen-sm) {
 		padding-left: @navmenu-width;
 	}
+}
+
+
+/*=================================
+* LANDING PAGE
+=================================*/
+
+body.home {
+	min-height: 100%;
+}
+
+.jumbotron-landing {
+	height: 100vh;
+	margin-bottom: 0;
+	color: white;
+	&.background-1 { background-image: url(../img/187.jpg); }
+	&.background-2 { background-image: url(../img/7245.jpg); }
+	&.background-3 { background-image: url(../img/35618.jpg); }
+	background-size: cover;
+	h1 {
+		color: inherit;
+	}
+}
+
+label[for="home-searchbox__input"] {
+	display: none;
+}
+
+.navbar {
+	font-size: inherit;
 }
