--- a/views/default.hbs
+++ b/views/default.hbs
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>OA Sandbox</title>
+  <title>Monocle</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-
-
 
   {{>stylesheets}}
 
@@ -17,6 +15,6 @@
 
   	{{{ body }}}
 
-  {{>scripts}}
+    {{>scripts}}
   </body>
 </html>
