--- a/src/main.less
+++ b/src/main.less
@@ -10,11 +10,14 @@
 =================================*/
 
 @font-size-base: 18px;
-@grid-float-breakpoint: 0;
+
+@font-size-h4: ceil((@font-size-base * 1.1));
+@font-size-h5: ceil((@font-size-base * 0.85));
 
 @navbar-inverse-color: white;
 @navbar-inverse-bg: transparent;
 @navbar-inverse-link-hover-bg: rgba(0, 0, 0, 0.5);
+
 
 /*=================================
 * GENERAL
@@ -24,10 +27,78 @@ html {
 	height: 100%;
 }
 
+a {
+	text-decoration: none !important;
+}
+
+.progress-bar {
+	width: 100%;
+	height: 30px;
+	border-radius: 15px;
+	border: 1px solid @gray-light;
+	margin-top: @padding-base-vertical;
+	margin-bottom: @padding-base-vertical;
+}
+
+.margin-vertical {
+	margin-top: ceil(@line-height-computed);
+	margin-bottom: ceil(@line-height-computed);
+}
+
+/*================================
+* APP ACCORDION
+=================================*/
+
+body.app {
+	padding-left: @mobile-nav-width;
+	@media (min-width: @screen-sm) {
+		padding-left: @navmenu-width;
+	}
+	overflow: hidden;
+}
+
+.citation-list,
+.single-citation {
+	height: 100vh;
+	padding-top: (@padding-base-vertical);
+	padding-bottom: (@padding-base-vertical);
+	overflow-y: scroll;
+}
+
+@media (min-width: @screen-md) {
+	.paper-details {
+		display: none;
+	}
+	.citation-list .panel-body {
+		display: none;
+	}
+	.paper-details {
+		display: block;
+	}
+}
+
+.panel-heading {
+	background: @gray-lighter;
+	color: @gray-dark;
+	h4, h5 { color: inherit }
+	a:hover &,
+	a[aria-expanded=true] & {
+		color: @brand-primary;
+	}
+}
+
+.author-list {
+	font-weight: inherit;
+}
+
+.year {
+	font-weight: 700;
+}
+
+
 /* ===============================
 * NAVIGATION
 =============================== */
-
 
 @mobile-nav-width: 74px;
 
@@ -35,11 +106,21 @@ html {
 	width: @mobile-nav-width;
 }
 
-.search {
-	padding-left: @mobile-nav-width;
-	@media (min-width: @screen-sm) {
-		padding-left: @navmenu-width;
+.navmenu-inverse .navbar-toggle {
+	border-color: white;
+	.icon-bar {
+		background-color: white;
 	}
+}
+
+.navmenu form {
+	padding: (@padding-base-vertical) (@padding-base-horizontal);
+}
+
+.navbar-footer {
+	position: absolute;
+	bottom: 0;
+	padding-left: (@padding-base-vertical);
 }
 
 
