--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,4 +18,8 @@
   </div>
 </div>
 
-{{>footer}}
+<footer class="navbar navbar-inverse navbar-fixed-bottom">
+  <div class="container-fluid">
+    {{>footer}}
+  </div>
+</footer>
