--- a/views/lens.hbs
+++ b/views/lens.hbs
@@ -144,12 +144,19 @@
       var reg = new RegExp(/PMC(\d+)/);
       var pmcId = document.URL.match(reg)[0];
 
+      var document_url = "http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pmc&id=" + pmcId.replace("PMC", "");
+
       var app = new Lens({
-        document_url: "http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pmc&id=" + pmcId.replace("PMC", ""),
+        document_url : document_url
       });
 
       $(function() {
-        app.start();
+        try {
+          app.start();
+        } catch(e) {
+          console.log(e);
+        }
+        console.log(app);
 
         if (isTouchDevice()) {
           $('#container').addClass('touchable');
