--- a/views/app.hbs
+++ b/views/app.hbs
@@ -3,7 +3,9 @@
 <div id="main-nav" class="navmenu navmenu-inverse navmenu-fixed-left offcanvas-xs main-nav" role="navigation">
   <ul class="nav navmenu-nav">
 
-    <li><a href="/"><span class="icon-home"></span> Home</a></li>
+    <li>{{user}}</li>
+    <li><a href="#" data-toggle="modal" data-target="#modal-signup-form">Create an account</a></li>
+    <li><a href="#" data-toggle="modal" data-target="#modal-signin-form">Sign in</a></li>
     <!--
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, Casey</a>
@@ -25,10 +27,8 @@
       </form>
     </li>
 
+    <div id="folders"></div>
 
-    <div id="folders">
-
-    </div>
   </ul>
 
   <footer class="navbar-footer">
