--- a/views/app.hbs
+++ b/views/app.hbs
@@ -3,18 +3,7 @@
 <div id="main-nav" class="navmenu navmenu-inverse navmenu-fixed-left offcanvas-xs main-nav" role="navigation">
   <ul class="nav navmenu-nav">
 
-    <li>{{user}}</li>
-    <li><a href="#" data-toggle="modal" data-target="#modal-signup-form">Create an account</a></li>
-    <li><a href="#" data-toggle="modal" data-target="#modal-signin-form">Sign in</a></li>
-    <!--
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, Casey</a>
-      <ul class="dropdown-menu navmenu-nav" role="menu">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Logout</a></li>
-      </ul>
-    </li>
-    -->
+    <div id="account-area" data-user="{{user}}"></div>
 
     <li>
       <form role="search" method="GET" action="/search">
