--- a/views/partials/modals.hbs
+++ b/views/partials/modals.hbs
@@ -25,7 +25,9 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Sign up!</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#modal-signin-form">
+          I already have an account
+        </button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -56,7 +58,10 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Log in</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#modal-signup-form">
+          Create an account
+        </button>
+        <!-- <button type="button" class="btn btn-warning">I forgot my password</button> -->
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
