--- a/views/partials/modals.hbs
+++ b/views/partials/modals.hbs
@@ -40,23 +40,9 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h3 class="modal-title">Sign in</h3>
       </div>
-      <div class="modal-body">
 
-        <form method="POST" action="/user/signin/">
-          <div class="form-group">
-            <label for="si-email">Email address</label>
-            <input type="email" class="form-control" id="si-email" name="email" />
-          </div>
-          <div class="form-group">
-            <label for="si-password">Password</label>
-            <input type="password" class="form-control" id="si-password" name="password" />
-          </div>
+      <div class="modal-body" id="signin-form-wrapper"></div>
 
-          <input type="submit" value="Submit" />
-
-        </form>
-
-      </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#modal-signup-form">
           Create an account
