Added system for alert notifications

--- a/src/main.less
+++ b/src/main.less
@@ -45,6 +45,7 @@ a {
 	margin-bottom: ceil(@line-height-computed);
 }
 
+
 /*================================
 * APP ACCORDION
 =================================*/
@@ -95,6 +96,17 @@ body.app {
 	font-weight: 700;
 }
 
+
+/*================================
+Alert Area
+=================================*/
+
+.alert-area-wrapper {
+	position: fixed;
+	top: 0;
+	z-index: 10000;
+
+}
 
 /* ===============================
 * NAVIGATION
