--- a/views/default.hbs
+++ b/views/default.hbs
@@ -13,6 +13,8 @@
 
   <body class="{{pagename}}">
 
+    <div id="alert-area" class="alert-area-wrapper"></div>
+
   	{{{ body }}}
 
     {{>modals}}
