--- a/views/partials/modals.hbs
+++ b/views/partials/modals.hbs
@@ -5,25 +5,9 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h3 class="modal-title">Sign up now!</h3>
       </div>
-      <div class="modal-body">
 
-        <form method="POST" action="/user/signup/">
-          <div class="form-group">
-            <label for="su-email">Email address</label>
-            <input type="email" class="form-control" id="su-email" name="email" />
-          </div>
-          <div class="form-group">
-            <label for="su-password">Password</label>
-            <input type="password" class="form-control" id="su-password" name="password" />
-          </div>
-          <div class="form-group">
-            <label for="su-password-2">Repeat Password</label>
-            <input type="password" class="form-control" id="su-password-2" name="password-2" />
-          </div>
-          <input type="submit" value="Submit" />
-        </form>
+      <div class="modal-body" id="signup-form-wrapper"></div>
 
-      </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#modal-signin-form">
           I already have an account
