Convenient way to pass data from front end to back end

--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -1,3 +1,7 @@
 {{#each scripts}}
 	<script type="text/javascript" src="/js/{{this}}"></script>
 {{/each}}
+
+<script type="text/javascript">
+	window.globals = {{{json globals}}}
+</script>
