--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,17 @@
 {{!< default}}
 
+<header class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="text-right">
+      <ul class="horizontal-list">
+        <li><a href="#" data-toggle="modal" data-target="#modal-signin-form" class="btn btn-info">Sign-in</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#modal-signup-form" class="btn btn-success">Create an account</a></li>
+      </ul>
+    </div>
+  </div>
+</header>
+
+
 <div class="jumbotron jumbotron-landing intro background-{{background}}">
   <div class="container">
     <h1>Monocle</h1>
