Repositioned hamburger icon

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-<header class="navbar navbar-inverse navbar-fixed-top">
+<!-- <header class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="text-right">
       <ul class="horizontal-list">
@@ -9,7 +9,7 @@
       </ul>
     </div>
   </div>
-</header>
+</header> -->
 
 
 <div class="jumbotron jumbotron-landing intro background-{{background}}">
