Added styles for the forms while they wait for a backend response

--- a/src/main.less
+++ b/src/main.less
@@ -58,6 +58,14 @@ a {
 	}
 }
 
+.waiting {
+	cursor: wait;
+	button {
+		opacity: 0.7;
+		font-style: italic;
+	}
+}
+
 /*================================
 * APP ACCORDION
 =================================*/
@@ -117,7 +125,6 @@ Alert Area
 	position: fixed;
 	top: 0;
 	z-index: 10000;
-
 }
 
 /* ===============================
