--- a/views/app.hbs
+++ b/views/app.hbs
@@ -3,6 +3,12 @@
 <div id="main-nav" class="navmenu navmenu-inverse navmenu-fixed-left offcanvas-xs main-nav" role="navigation">
   <div class="nav navmenu-nav">
 
+    <div class="close-wrapper">
+      <button type="button" class="btn btn-info btn-close" data-toggle="offcanvas" data-target="#main-nav">
+        Close
+      </button>
+    </div>
+
     <div id="account-area" class="account-area" data-user="{{user}}"></div>
 
     <form role="search" method="GET" action="/search">
@@ -23,7 +29,7 @@
   </footer>
 </div>
 
-<div id="mobile-nav" class="navmenu navmenu-inverse navmenu-fixed-left visible-xs mobile-nav" data-toggle="offcanvas" data-target="#main-nav" data-canvas="body">
+<div id="mobile-nav" class="navmenu navmenu-inverse navmenu-fixed-left visible-xs mobile-nav" data-toggle="offcanvas" data-target="#main-nav">
   <button type="button" class="navbar-toggle">
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
