--- a/views/default.hbs
+++ b/views/default.hbs
@@ -8,6 +8,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
+  <!--prevent favicon request-->
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
   {{>stylesheets}}
 
 </head>
