Fix styling on dropdown

--- a/src/main.less
+++ b/src/main.less
@@ -160,9 +160,10 @@ Alert Area
 }
 
 .account-area {
-	.open>a,
 	a:hover,
-	.open>a:hover {
+	.open>a,
+	.open>a:hover,
+	.open>a:focus {
 		background: transparent;
 	}
 	.navmenu-nav.dropdown-menu {
