Set up to test search functionality on back-end

--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -1,6 +1,6 @@
 
 <script type="text/javascript">
-	window.globals = {{{json globals}}}
+	window.monocle = {{{json state}}}
 </script>
 
 {{#each scripts}}
