Bringing up citation details and citation controls

--- a/src/main.less
+++ b/src/main.less
@@ -23,9 +23,6 @@
 * GENERAL
 =================================*/
 
-html {
-	height: 100%;
-}
 
 a {
 	text-decoration: none !important;
@@ -75,7 +72,7 @@ body.app {
 	@media (min-width: @screen-sm) {
 		padding-left: @navmenu-width;
 	}
-	overflow: hidden;
+	// overflow: hidden;
 }
 
 .citation-list,
