--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -45,24 +45,24 @@
 // 1. Global
 // ---------
 
-$global-font-size: 100%;
+$global-font-size: 112%;
 $global-width: rem-calc(1200);
-$global-lineheight: 1.5;
+$global-lineheight: 1.41;
 $foundation-palette: (
-  primary: #2199e8,
+  primary: #264c73,
   secondary: #777,
-  success: #3adb76,
+  success: #22b24c,
   warning: #ffae00,
-  alert: #ec5840,
+  alert: #e22620,
 );
-$light-gray: #e6e6e6;
-$medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
+$light-gray: #eee;
+$medium-gray: #ccc;
+$dark-gray: #777;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
-$body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-color: #777;
+$body-font-family: Georgia, "Times New Roman", serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
