--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,7 @@
 
-<ul class="nav navbar-nav navbar-right">
-  <li><a href="/about/">About Monocle</a></li>
-  <li><a href="https://github.com/CAYdenberg/monocle"><span class="icon-github"></span> GitHub</a></li>
-</ul>
+<div class="row">
+  <ul class="menu menu--footer">
+    <li><a href="/about/">About Monocle</a></li>
+    <li><a href="https://github.com/CAYdenberg/monocle"><span class="icon-github"></span> GitHub</a></li>
+  </ul>
+</div>
