--- a/views/app.hbs
+++ b/views/app.hbs
@@ -3,7 +3,5 @@
 {{> nav}}
 
 <div class="container-fluid">
-
-  <div class="col-sm-12 col-md-6 citation-list" id="citation-list"></div>
-
+  <div id="react-entry"></div>
 </div>
