--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,13 +1,7 @@
-<div id="main-nav" class="navmenu navmenu-inverse navmenu-fixed-left offcanvas-xs main-nav" role="navigation">
-  <div class="nav navmenu-nav">
+<div id="main-nav" class="main-nav" role="navigation">
+  <div class="container">
 
-    <div class="close-wrapper">
-      <button type="button" class="btn btn-info btn-close" data-toggle="offcanvas" data-target="#main-nav">
-        Close
-      </button>
-    </div>
-
-    <form role="search" method="GET" action="/search">
+    <form role="search" method="GET" action="/search" class="form-inline">
       <div class="form-group">
         <input type="text" class="form-control" name="query" placeholder="Search">
       </div>
@@ -17,16 +11,4 @@
     </form>
 
   </div>
-
-  <footer class="navbar-footer">
-    {{>footer}}
-  </footer>
-</div>
-
-<div id="mobile-nav" class="navmenu navmenu-inverse navmenu-fixed-left visible-xs mobile-nav" data-toggle="offcanvas" data-target="#main-nav">
-  <button type="button" class="navbar-toggle">
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </button>
 </div>
