--- a/src/main.less
+++ b/src/main.less
@@ -1,7 +1,39 @@
-@import "../node_modules/bootstrap/less/bootstrap.less";
+@import "../node_modules/bootstrap/less/variables.less";
+@import "../node_modules/bootstrap/less/mixins.less";
+
+// Reset and dependencies
+@import "../node_modules/bootstrap/less/normalize.less";
+
+// Core CSS
+@import "../node_modules/bootstrap/less/scaffolding.less";
+@import "../node_modules/bootstrap/less/type.less";
+@import "../node_modules/bootstrap/less/grid.less";
+@import "../node_modules/bootstrap/less/tables.less";
+@import "../node_modules/bootstrap/less/forms.less";
+@import "../node_modules/bootstrap/less/buttons.less";
+
+// Components
+@import "../node_modules/bootstrap/less/component-animations.less";
+@import "../node_modules/bootstrap/less/dropdowns.less";
+@import "../node_modules/bootstrap/less/navs.less";
+@import "../node_modules/bootstrap/less/navbar.less";
+@import "../node_modules/bootstrap/less/pagination.less";
+@import "../node_modules/bootstrap/less/jumbotron.less";
+@import "../node_modules/bootstrap/less/progress-bars.less";
+@import "../node_modules/bootstrap/less/panels.less";
+
+
+// Components w/ JavaScript
+@import "../node_modules/bootstrap/less/modals.less";
+
+// Utility classes
+@import "../node_modules/bootstrap/less/utilities.less";
+@import "../node_modules/bootstrap/less/responsive-utilities.less";
+
 
 @import "../node_modules/bootswatch/journal/variables.less";
 @import "../node_modules/bootswatch/journal/bootswatch.less";
+
 
 /*=================================
 * VARIABLES
