--- a/views/app.hbs
+++ b/views/app.hbs
@@ -6,7 +6,7 @@
     <form role="search" method="GET" action="/search" class="form-inline">
       <div class="form-group">
         <label for="query" class="sr-only">Search</label>
-        <input type="text" class="form-control" name="query" id="query" placeholder="Search">
+        <input type="text" class="form-control" name="query" id="query" placeholder="Search" value="{{appData.query}}">
         <button type="submit" class="btn btn-success hidden-sm hidden-xs"><span class="icon-pubmed"></span></button>
       </div>
     </form>
