--- a/views/home.hbs
+++ b/views/home.hbs
@@ -25,7 +25,9 @@
 
     <p>Monocle simplifies queries to the National Center for Biotechnology Information (NCBI) eUtils services by providing shortcuts for the most common queries.</p>
 
-    <p>Monocle is RESTful API which serves data in JSON format. You can try it out with the form above.</p>
+    <p>Monocle is RESTful API wrapper around <a href="https://www.npmjs.com/package/node-ncbi">node-ncbi</a>, and returns data in JSON format.</p>
+
+    <p>In addition, there is a tiny app running on top of this API, which you can try out using the form above.</p>
 
     <h2>Queries</h2>
 
