Fix weird alignment in the nav bar

--- a/views/app.hbs
+++ b/views/app.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 
 <nav id="main-nav" class="main-nav" role="navigation">
-  <div class="container">
+  <div class="container-fluid">
 
     <form role="search" method="GET" action="/search" class="form-inline">
       <div class="form-group">
