Expand menu bar

--- a/src/main.less
+++ b/src/main.less
@@ -99,7 +99,7 @@ a {
 
 .citation-panel-wrapper {
 	height: 100vh;
-	padding-top: 75px;
+	padding-top: 60px;
 	overflow: hidden;
 	@media (min-width: @screen-md) {
 		width: 50%;
@@ -164,7 +164,16 @@ Alert Area
 	width: 100%;
 	background: @gray-dark;
 	color: white;
-	padding: 15px;
+	padding: 0 15px;
+}
+
+.navbar-form {
+	padding: 0;
+}
+
+.navbar-nav>li>a:hover,
+.navbar-nav>li>a:focus {
+	background: transparent;
 }
 
 
