--- a/src/main.less
+++ b/src/main.less
@@ -164,10 +164,10 @@ Alert Area
 	width: 100%;
 	background: @gray-dark;
 	color: white;
-	padding: 0 15px;
 }
 
-.navbar-form {
+.navbar-form,
+.navbar-collapse {
 	padding: 0;
 }
 
