--- a/src/main.less
+++ b/src/main.less
@@ -164,6 +164,11 @@ Alert Area
 	width: 100%;
 	background: @gray-dark;
 	color: white;
+	li>a>i {
+		display: inline-block;
+		font-size: 1.4em;
+		margin: 0 0.2em;
+	}
 }
 
 .navbar-form,
