Update links and names

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,8 +2,8 @@
 
 <div class="jumbotron jumbotron-landing intro background-{{background}}">
   <div class="container">
-    <h1>Monocle</h1>
-    <p>Medline searches for the modern web</p>
+    <h1>pubmed.app</h1>
+    <p>PubMed searches for the modern web</p>
 
     <form method="GET" action="search">
       <div class="form-group home-searchbox">
@@ -23,15 +23,15 @@
 
     <h2>About</h2>
 
-    <p>Monocle simplifies queries to the National Center for Biotechnology Information (NCBI) eUtils services by providing shortcuts for the most common queries.</p>
+    <p>node-ncbi simplifies queries to the National Center for Biotechnology Information (NCBI) eUtils services by providing shortcuts for the most common queries.</p>
 
-    <p>Monocle is RESTful API wrapper around <a href="https://www.npmjs.com/package/node-ncbi">node-ncbi</a>, and returns data in JSON format.</p>
+    <p>pubmed.app is primarily is RESTful API wrapper around <a href="https://www.npmjs.com/package/node-ncbi">node-ncbi</a>, and returns data in JSON format.</p>
 
-    <p>In addition, there is a tiny app running on top of this API, which you can try out using the form above.</p>
+    <p>There is a small React application running on top of this API, which you can try out using the form above.</p>
 
     <h2>Queries</h2>
 
-    <p>All queries are made to <a href="http://www.ncbi.site/api/">http://www.ncbi.site/api/</a>. Right now, the only available queries are to PubMed (the literature database.)</p>
+    <p>All queries are made to <a href="https://www.pubmed.app/api/">http://www.pubmed.app/api/</a>. Right now, the only available queries are to PubMed (the literature database.)</p>
 
     <h3>Search PubMed</h3>
 
