--- a/views/default.hbs
+++ b/views/default.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Monocle</title>
+  <title>pubmed.app</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
