--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,5 @@
 
 <ul class="horizontal-list">
   <li><a href="https://github.com/CAYdenberg/node-ncbi"><span class="icon-github"></span> GitHub</a></li>
+  <li><a href="http://www.caseyy.org">by @CAYdenberg</a></li>
 </ul>
